name:                distributed-editor
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Sven Keidel
maintainer:          svenkeidel@googlemail.com
-- copyright:           
category:            Text
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     
                       Text.Editor.Keyboard,
                       Text.Editor.Keybinding,
                       Text.Editor.Vim
                       
  other-modules:       Data.Automaton,
                       Data.Process
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       attoparsec,
                       containers,
                       haskell-src-meta,
                       template-haskell,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
